kubernetes/apps/external-endpoints/slzb-06/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slzb-06
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "SLZB-06"
    gethomepage.dev/description: "Zigbee-to-Ethernet coordinator for Home Assistant"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "smlight.png"
spec:
  parentRefs:
    - name: ${gatewayName}
      namespace: gateway
      sectionName: https
  hostnames:
    - "zigbee.${domain}"
  rules:
    - backendRefs:
        - name: slzb-06
          port: 80
